tests/fail/no_parameters_documented.stderr
error: Function has no documented arguments.
       Document at least one function argument.
 --> tests/fail/no_parameters_documented.rs:6:8
  |
6 | pub fn add(first: i32, second: i32) -> i32 {
  |        ^^^
